# TransMLA

BISA/: README.md  pyproject.toml
BISA/dsa_kernel/: __init__.py  block_indexer_topk_reducesum.py  dense_mla_fwd.py  dsa.py  full_indexer_bwd.py  index.py  indexer_bwd.py  indexer_topk_reducesum.py  sparse_mla_bwd.py  sparse_mla_fwd.py  sparse_mla_topk_reducesum.py
BISA/dsa_kernel_debug/: block_indexer_topk_reducesum.py  compare_indexers.py  dense_mla_fwd.py  dsa.py  full_indexer_bwd.py  index.py  indexer_bwd.py  indexer_topk_reducesum.py  sparse_mla_bwd.py  sparse_mla_fwd.py  sparse_mla_topk_reducesum.py  util.py
BISA/examples/Youtu-LLM-2B-Base-DSA/: config.json  configuration_deepseek_v3.py  generation_config.json  kernel.py  modeling_deepseek_v3.py  ppl.py  tokenizer_config.json
transmla/: converter.py  lora_qkv.py  partial_rope.py
