[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa-kernel"
version = "0.1.0"
description = "DSA Warmup / Stage2 / BISA MHA kernel Python wrappers"
requires-python = ">=3.9"

dependencies = [
    "torch",
]

[tool.setuptools]
packages = ["dsa_kernel"]

